# nid_camlidar_calibration

./: CMakeLists.txt  README.md  package.xml
include/camlidar_calibration/: Calibration.h  CameraModel.h  Datatypes.h  FileLoader.h  PinholeModel.h  local_parameterization_se3.hpp
params/: KITTI00-02.yaml  KITTI04-12.yaml
src/: Calibration.cpp  FileLoader.cpp  PinholeModel.cpp  bal_example.cpp  main.cpp
